feat: create LindbladScraper